--- a/bin/k8s/templates/litellm-secret.yaml
+++ b/bin/k8s/templates/litellm-secret.yaml
@@ -24,4 +24,8 @@ metadata:
 type: Opaque
 data:
   ANTHROPIC_API_KEY: {{ .Values.litellm.apiKeys.anthropic | b64enc | quote }}
+  {{- if .Values.litellm.persistence.enabled }}
+  DATABASE_URL: {{ printf "postgresql://%s:%s@%s-postgresql-litellm:5432/%s" .Values.litellm.persistence.database.username .Values.litellm.persistence.database.password .Release.Name .Values.litellm.persistence.database.name | b64enc | quote }}
+  LITELLM_MASTER_KEY: {{ .Values.litellm.masterKey | b64enc | quote }}
+  {{- end }}
 {{- end }}
