--- a/common/config/src/main/resources/llm.conf
+++ b/common/config/src/main/resources/llm.conf
@@ -15,18 +15,13 @@
 # specific language governing permissions and limitations
 # under the License.
 
-{{- if .Values.litellm.enabled }}
-apiVersion: v1
-kind: Secret
-metadata:
-  name: litellm-secret
-  namespace: {{ .Release.Namespace }}
-type: Opaque
-data:
-  ANTHROPIC_API_KEY: {{ .Values.litellm.apiKeys.anthropic | b64enc | quote }}
-  {{- if .Values.litellm.persistence.enabled }}
-  {{- $postgresqlLitellm := index .Values "postgresql-litellm" }}
-  DATABASE_URL: {{ printf "postgresql://%s:%s@%s-postgresql-litellm:5432/%s" $postgresqlLitellm.auth.username $postgresqlLitellm.auth.password .Release.Name $postgresqlLitellm.auth.database | b64enc | quote }}
-  LITELLM_MASTER_KEY: {{ .Values.litellm.masterKey | b64enc | quote }}
-  {{- end }}
-{{- end }}
+# LLM Configuration
+llm {
+  # Base URL for LiteLLM service
+  base-url = "http://litellm-svc:4000"
+  base-url = ${?LITELLM_BASE_URL}
+
+  # Master key for LiteLLM authentication
+  master-key = ""
+  master-key = ${?LITELLM_MASTER_KEY}
+}
