route all model request to access control service

--- a/common/config/src/main/resources/llm.conf
+++ b/common/config/src/main/resources/llm.conf
@@ -18,7 +18,7 @@
 # LLM Configuration
 llm {
   # Base URL for LiteLLM service
-  base-url = "http://litellm-svc:4000"
+  base-url = "http://0.0.0.0:4000"
   base-url = ${?LITELLM_BASE_URL}
 
   # Master key for LiteLLM authentication
