--- a/frontend/proxy.config.json
+++ b/frontend/proxy.config.json
@@ -1,6 +1,11 @@
 {
+  "/api/models": {
+    "target": "http://localhost:9096",
+    "secure": false,
+    "changeOrigin": true
+  },
   "/api/chat/completion": {
-    "target": "http://0.0.0.0:4000",
+    "target": "http://localhost:9096",
     "secure": false,
     "changeOrigin": true
   },
