add openai key support to helm chart

--- a/bin/k8s/templates/litellm-deployment.yaml
+++ b/bin/k8s/templates/litellm-deployment.yaml
@@ -56,6 +56,11 @@ spec:
                 secretKeyRef:
                   name: litellm-secret
                   key: ANTHROPIC_API_KEY
+            - name: OPENAI_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: litellm-secret
+                  key: OPENAI_API_KEY
           command:
             - litellm
             - --config
