--- a/bin/k8s/templates/litellm-secret.yaml
+++ b/bin/k8s/templates/litellm-secret.yaml
@@ -24,6 +24,7 @@ metadata:
 type: Opaque
 data:
   ANTHROPIC_API_KEY: {{ .Values.litellm.apiKeys.anthropic | b64enc | quote }}
+  OPENAI_API_KEY: {{ .Values.litellm.apiKeys.openai | b64enc | quote }}
   {{- if .Values.litellm.persistence.enabled }}
   {{- $postgresqlLitellm := index .Values "postgresql-litellm" }}
   DATABASE_URL: {{ printf "postgresql://%s:%s@%s-postgresql-litellm:5432/%s" $postgresqlLitellm.auth.username $postgresqlLitellm.auth.password .Release.Name $postgresqlLitellm.auth.database | b64enc | quote }}
