--- a/file-service/src/main/resources/docker-compose.yml
+++ b/file-service/src/main/resources/docker-compose.yml
@@ -20,6 +20,7 @@ services:
   minio:
     image: minio/minio:RELEASE.2025-02-28T09-55-16Z
     container_name: texera-lakefs-minio
+    restart: unless-stopped
     ports:
       - "9000:9000"
       - "9001:9001"
@@ -34,7 +35,7 @@ services:
   postgres:
     image: postgres:15
     container_name: texera-lakefs-postgres
-    restart: always
+    restart: unless-stopped
     environment:
       - POSTGRES_DB=texera_lakefs
       - POSTGRES_USER=texera_lakefs_admin
@@ -51,6 +52,7 @@ services:
   lakefs:
     image: treeverse/lakefs:1.51
     container_name: texera-lakefs-lakefs
+    restart: unless-stopped
     depends_on:
       postgres:
         condition: service_healthy
