--- a/common/config/src/main/resources/cluster.conf
+++ b/common/config/src/main/resources/cluster.conf
@@ -15,10 +15,10 @@
 # specific language governing permissions and limitations
 # under the License.
 
-akka {
-    # Loggers to register at boot time (akka.event.Logging$DefaultLogger logs
+pekko {
+    # Loggers to register at boot time (pekko.event.Logging$DefaultLogger logs
     # to STDOUT)
-    loggers = ["akka.event.slf4j.Slf4jLogger"]
+    loggers = ["org.apache.pekko.event.slf4j.Slf4jLogger"]
 
     # Log level used by the configured loggers (see "loggers") as soon
     # as they have been started; before that, see "stdout-loglevel"
@@ -32,18 +32,18 @@ akka {
 
     # Filter of log events that is used by the LoggingAdapter before
     # publishing log events to the eventStream.
-    logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+    logging-filter = "org.apache.pekko.event.slf4j.Slf4jLoggingFilter"
 
     actor {
         provider = cluster
         enable-additional-serialization-bindings = on
         allow-java-serialization = off
         serializers {
-            kryo = "io.altoo.akka.serialization.kryo.KryoSerializer"
+            kryo = "io.altoo.serialization.kryo.pekko.PekkoKryoSerializer"
         }
         serialization-bindings {
             "java.io.Serializable" = kryo
-            "java.lang.Throwable" = akka-misc
+            "java.lang.Throwable" = pekko-misc
         }
     }
 
@@ -62,7 +62,7 @@ akka {
         # auto downing is NOT safe for production deployments.
         # you may want to use it during development, read more about it in the docs.
         auto-down-unreachable-after = off
-        downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
+        downing-provider-class = "org.apache.pekko.cluster.sbr.SplitBrainResolverProvider"
         unreachable-nodes-reaper-interval = 5s
         gossip-interval = 10s
         leader-actions-interval = 10s
@@ -76,4 +76,4 @@ akka {
     }
 }
 
-akka-kryo-serialization.kryo-initializer = "org.apache.amber.engine.common.AmberKryoInitializer"
+pekko-kryo-serialization.kryo-initializer = "org.apache.amber.engine.common.AmberKryoInitializer"
