--- a/.github/workflows/check-header.yml
+++ b/.github/workflows/check-header.yml
@@ -30,4 +30,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: apache/skywalking-eyes@v0.7.0
+      - uses: apache/skywalking-eyes@5c5b974209f0de5d905f37deb69369068ebfc15c # v0.7.0
