--- a/.github/workflows/github-action-build.yml
+++ b/.github/workflows/github-action-build.yml
@@ -105,8 +105,8 @@ jobs:
           distribution: 'temurin'
           java-version: 11
       - name: Setup sbt launcher
-        uses: sbt/setup-sbt@v1
-      - uses: coursier/cache-action@v6
+        uses: sbt/setup-sbt@3e125ece5c3e5248e18da9ed8d2cce3d335ec8dd # v1.1.14
+      - uses: coursier/cache-action@4e2615869d13561d626ed48655e1a39e5b192b3c # v6.4.9
         with:
           extraSbtFiles: '["*.sbt", "project/**.{scala,sbt}", "project/build.properties" ]'
       - name: Lint with scalafmt
