feat: Lint Python with Ruff (#4105)
<!--
Thanks for sending a pull request (PR)! Here are some tips for you:
1. If this is your first time, please read our contributor guidelines:
[Contributing to
Texera](https://github.com/apache/texera/blob/main/CONTRIBUTING.md)
  2. Ensure you have added or run the appropriate tests for your PR
  3. If the PR is work in progress, mark it a draft on GitHub.
  4. Please write your PR title to summarize what this PR proposes, we 
    are following Conventional Commits style for PR titles as well.
  5. Be sure to keep the PR description updated to reflect all changes.
-->

### What changes were proposed in this PR?
<!--
Please clarify what changes you are proposing. The purpose of this
section
is to outline the changes. Here are some tips for you:
  1. If you propose a new API, clarify the use case for a new API.
  2. If you fix a bug, you can clarify why it is a bug.
  3. If it is a refactoring, clarify what has been changed.
  3. It would be helpful to include a before-and-after comparison using 
     screenshots or GIFs.
  4. Please consider writing useful notes for better and faster reviews.
-->
1. Replace flake8 and black with Ruff in CI.
2. Format existing code using Ruff

Basic Ruff commands:
Under amber/src/main/python
```cd amber/src/main/python```
Run Ruff’s formatter in dry mode
```ruff format --check .```
Run Ruff’s formatter
```ruff format .```
Run Ruff’s linter
```ruff check .```

### Any related issues, documentation, discussions?
<!--
Please use this section to link other resources if not mentioned
already.
1. If this PR fixes an issue, please include `Fixes #1234`, `Resolves
#1234`
or `Closes #1234`. If it is only related, simply mention the issue
number.
  4. If there is design documentation, please add the link.
  5. If there is a discussion in the mailing list, please add the link.
-->
Closes #4078

### How was this PR tested?
<!--
If tests were added, say they were added here. Or simply mention that if
the PR
is 

--- a/.github/workflows/github-action-build.yml
+++ b/.github/workflows/github-action-build.yml
@@ -152,9 +152,9 @@ jobs:
       - name: Create Database and User
         run: |
           cd sql && sudo -u postgres psql -f iceberg_postgres_catalog.sql
-      - name: Lint with flake8 and black
+      - name: Lint with Ruff
         run: |
-          cd amber/src/main/python && flake8 && black . --check
+          cd amber/src/main/python && ruff check . && ruff format --check .
       - name: Test with pytest
         run: |
           cd amber/src/main/python && pytest -sv
