--- a/amber/requirements.txt
+++ b/amber/requirements.txt
@@ -18,9 +18,7 @@
 wheel==0.41.2
 numpy==2.1.0
 pandas==2.2.3
-flake8==7.1.1
-Flake8-pyproject==1.2.3
-black==24.3.0
+ruff==0.14.7
 iniconfig==1.1.1
 loguru==0.7.0
 pyarrow==21.0.0
