--- a/amber/src/main/python/pyproject.toml
+++ b/amber/src/main/python/pyproject.toml
@@ -15,17 +15,13 @@
 # specific language governing permissions and limitations
 # under the License.
 
-[tool.black]
+[tool.ruff]
 line-length = 88
-target-version = ["py39", "py310", "py311", "py312"]
-extend-exclude = '''
-/(
-  proto
-)/
-'''
+target-version = "py310"
+extend-exclude = ["proto"]
 
-[tool.flake8]
-extend-ignore = ["F403", "F405", "E203"]
-exclude = ["proto"]
+[tool.ruff.lint]
+ignore = ["F403", "F405", "E203"]
+
+[tool.ruff.lint.mccabe]
 max-complexity = 10
-max-line-length = 88
