feat(ui): add pagination and search for wide-column tables (#4086)
<!--
Thanks for sending a pull request (PR)! Here are some tips for you:
1. If this is your first time, please read our contributor guidelines:
[Contributing to
Texera](https://github.com/apache/texera/blob/main/CONTRIBUTING.md)
  2. Ensure you have added or run the appropriate tests for your PR
  3. If the PR is a work in progress, mark it as a draft on GitHub.
  4. Please write your PR title to summarize what this PR proposes. We 
    are following the Conventional Commits style for PR titles as well.
  5. Be sure to keep the PR description updated to reflect all changes.
-->

### What changes were proposed in this PR?
<!--
Please clarify what changes you are proposing. The purpose of this
section
is to outline the changes. Here are some tips for you:
  1. If you propose a new API, clarify the use case for a new API.
  2. If you fix a bug, you can clarify why it is a bug.
  3. If it is a refactoring, could you explain what has been changed?
  3. It would be helpful to include a before-and-after comparison using 
     screenshots or GIFs.
4. Please consider writing helpful notes for better and faster reviews.
-->
This PR adds a feature that enables Texera to efficiently handle tables
with vast numbers of columns in the result panel.

This PR adds UI features that enable Texera to efficiently handle tables
with large numbers of columns in the result viewer and related data
preview components.

Specifically, this PR introduces:

1. Horizontal Column Pagination
    1. "Next Columns" and "Previous Columns" buttons have been added.
2. Columns are now loaded in column windows (configurable size, default
25).
3. Prevents UI freezing or overflow when dealing with tables containing
hundreds or thousands of columns.
2. Column Search Bar
1. A new search box allows users to filter or jump directly to column
names.
2. When a column is found, that column window is automatically loaded
and highlighted.
    3. Usef

--- a/common/config/src/main/resources/gui.conf
+++ b/common/config/src/main/resources/gui.conf
@@ -108,5 +108,9 @@ gui {
     # whether AI copilot feature is enabled
     copilot-enabled = false
     copilot-enabled = ${?GUI_WORKFLOW_WORKSPACE_COPILOT_ENABLED}
+
+    # the limit of columns to be displayed in the result table
+    limit-columns = 15
+    limit-columns = ${?GUI_WORKFLOW_WORKSPACE_LIMIT_COLUMNS}
   }
 }
