chore: Redirect GitHub discussion notifications to dev email list (#4160)

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -86,5 +86,5 @@ notifications:
   commits:              commits@texera.apache.org
   issues:               notifications@texera.apache.org
   pullrequests:         notifications@texera.apache.org
-  discussions:          notifications@texera.apache.org
+  discussions:          dev@texera.apache.org
   jobs:                 commits@texera.apache.org
