--- a/bin/k8s/templates/external-names.yaml
+++ b/bin/k8s/templates/external-names.yaml
@@ -73,4 +73,12 @@ to access services in the main namespace using the same service names.
   "externalName" (printf "%s-svc.%s.svc.cluster.local" .Values.webserver.name $namespace)
 ) | nindent 0 }}
 
+---
+{{/* MinIO ExternalName */}}
+{{- include "external-name-service" (dict 
+  "name" (printf "%s-minio" .Release.Name)
+  "namespace" $workflowComputingUnitPoolNamespace
+  "externalName" (printf "%s-minio.%s.svc.cluster.local" .Release.Name $namespace)
+) | nindent 0 }}
+
 
