feat: introduce materialized execution mode (#4158)
### What changes were proposed in this PR?
We are introducing a materialized execution mode alongside the existing
pipelined execution mode.

To support this, a new workflow setting called execution mode has been
added, along with a corresponding backend flag. Materialized and
pipelined execution are treated as the same level and are represented as
an enum in the configuration.

We also introduce a flag named `defaultExecutionMode`, whose value is
set to `pipelined`.

| Execution Mode | Demo |
| ------------- | ------------- |
| Pipelined
|![Pipelined](https://github.com/user-attachments/assets/f4d23d97-7e79-4214-b7d2-ed48391acf8a)
|
| Materialized |
![Materialized](https://github.com/user-attachments/assets/14dfdf8e-1a07-445e-8f4f-0085f3783104)|

### Any related issues, documentation, discussions?
This PR resolves issue #4157.

### How was this PR tested?
Tested with the existing test cases and test cases added for
MATERIALIZED ExecutionMode:

- Execution Tests (`DataProcessingSpec.scala`): Added 10 test cases
verifying that workflows with various operator combinations (CSV/JSONL
sources, filters, aggregations, joins) execute correctly in MATERIALIZED
mode and produce the same results as PIPELINED mode.
- Region Tests (`CostBasedScheduleGeneratorSpec.scala`): Added 5 test
cases verifying that CostBasedScheduleGenerator correctly creates one
region per operator in MATERIALIZED mode, with assertions confirming:
(1) only 1 state explored, (2) number of regions equals number of
operators, (3) each region contains exactly 1 operator, and (4) all
physical links become materialized region boundaries.

### Was this PR authored or co-authored using generative AI tooling?
No.

--- a/common/config/src/main/resources/gui.conf
+++ b/common/config/src/main/resources/gui.conf
@@ -63,8 +63,11 @@ gui {
     default-data-transfer-batch-size = 400
     default-data-transfer-batch-size = ${?GUI_WORKFLOW_WORKSPACE_DEFAULT_DATA_TRANSFER_BATCH_SIZE}
 
+    # default execution mode for workflows, can be either MATERIALIZED or PIPELINED
+    default-execution-mode = PIPELINED
+    default-execution-mode = ${?GUI_WORKFLOW_WORKSPACE_DEFAULT_EXECUTION_MODE}
+
     # whether selecting files from datasets instead of the local file system.
-    # The user system must be enabled to make this flag work!
     selecting-files-from-datasets-enabled = true
     selecting-files-from-datasets-enabled = ${?GUI_WORKFLOW_WORKSPACE_SELECTING_FILES_FROM_DATASETS_ENABLED}
 
