--- a/.github/workflows/github-action-build.yml
+++ b/.github/workflows/github-action-build.yml
@@ -104,6 +104,12 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: 11
+      - name: Setup Python for Scala tests
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.11'
+      - name: Show Python
+        run: python --version || python3 --version
       - name: Setup sbt launcher
         uses: sbt/setup-sbt@3e125ece5c3e5248e18da9ed8d2cce3d335ec8dd # v1.1.14
       - uses: coursier/cache-action@4e2615869d13561d626ed48655e1a39e5b192b3c # v6.4.9
