--- a/common/config/src/main/resources/kubernetes.conf
+++ b/common/config/src/main/resources/kubernetes.conf
@@ -20,7 +20,10 @@ kubernetes {
   enabled = false
   enabled = ${?KUBERNETES_COMPUTING_UNIT_ENABLED}
 
-  compute-unit-pool-namespace = "workflow-computing-unit-pool"
+  compute-unit-pool-name = "texera-workflow-computing-unit"
+  compute-unit-pool-name = ${?KUBERNETES_COMPUTE_UNIT_POOL_NAME}
+
+  compute-unit-pool-namespace = "texera-workflow-computing-unit-pool"
   compute-unit-pool-namespace = ${?KUBERNETES_COMPUTE_UNIT_POOL_NAMESPACE}
 
   compute-unit-service-name = "workflow-computing-unit-svc"
