--- a/bin/k8s/Chart.yaml
+++ b/bin/k8s/Chart.yaml
@@ -42,11 +42,6 @@ appVersion: "1.16.0"
 
 
 dependencies:
-  - name: ingress-nginx
-    version: 4.11.3
-    repository: https://kubernetes.github.io/ingress-nginx
-    condition: ingress-nginx.enabled
-
   - name: postgresql
     version: 16.5.6
     repository: https://charts.bitnami.com/bitnami
@@ -58,6 +53,11 @@ dependencies:
   - name: lakefs
     version: 1.4.5
     repository: https://charts.lakefs.io
+
+  - name: gateway-helm
+    version: 1.6.3
+    repository: oci://docker.io/envoyproxy
+    alias: envoy-gateway
 
   - name: metrics-server
     version: 3.12.2
